force-app/main/default/objects/AdWebCart__c/AdWebCart__c.object-meta.xml
<CustomObject>
    <label>Ad Web Cart</label>
    <nameField>
        <displayFormat>AWC-{0000}</displayFormat>
        <label>AdWebCart Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ad Web Carts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>