force-app/main/default/objects/AdWebCart__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Account this cart is related to.</description>
    <inlineHelpText>Account this cart is related to.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AdWebCarts</relationshipLabel>
    <relationshipName>AdWebCart</relationshipName>
    <type>Lookup</type>
</CustomField>