force-app/main/default/objects/AdWebCart__c/fields/CampaignEndDate__c.field-meta.xml
<CustomField>
    <fullName>CampaignEndDate__c</fullName>
    <description>Ending date of this cart&apos;s campaign.</description>
    <inlineHelpText>Ending date of this cart&apos;s campaign.</inlineHelpText>
    <label>Campaign End Date</label>
    <type>Date</type>
</CustomField>