force-app/main/default/objects/AdWebCart__c/fields/CampaignName__c.field-meta.xml
<CustomField>
    <fullName>CampaignName__c</fullName>
    <description>Human readable name of this cart&apos;s campaign.</description>
    <inlineHelpText>Human readable name of this cart&apos;s campaign.</inlineHelpText>
    <label>Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>