force-app/main/default/objects/AdWebCart__c/fields/CampaignStartDate__c.field-meta.xml
<CustomField>
    <fullName>CampaignStartDate__c</fullName>
    <description>Start date of this cart&apos;s campaign.</description>
    <inlineHelpText>Start date of this cart&apos;s campaign.</inlineHelpText>
    <label>Campaign Start Date</label>
    <type>Date</type>
</CustomField>