force-app/main/default/objects/AdWebCart__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to the Contact related to this cart.</description>
    <inlineHelpText>Reference to the Contact related to this cart.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AdWebCarts</relationshipLabel>
    <relationshipName>AdWebCart</relationshipName>
    <type>Lookup</type>
</CustomField>