force-app/main/default/objects/AdWebCart__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of this cart and its campaign.</description>
    <inlineHelpText>Description of this cart and its campaign.</inlineHelpText>
    <label>Description</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>