force-app/main/default/objects/AdWebCart__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>(&quot;Draft&quot;)</defaultValue>
    <description>Current status of this cart.</description>
    <inlineHelpText>Current status of this cart.</inlineHelpText>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>WebAdCartStatusOptions</valueSetName>
    </valueSet>
</CustomField>