force-app/main/default/objects/AdWebCart__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User that created this campaign cart.</description>
    <inlineHelpText>User that created this campaign cart.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AdWebCarts</relationshipName>
    <type>Lookup</type>
</CustomField>